// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Tårn snapshot fullt tårn med flagg 1`] = `
<div>
  <figure
    class="flex flex-col items-center gap-3"
  >
    <svg
      aria-label="Lily sitt mattetårn med 15 av 15 etasjer bygget"
      class="w-40 md:w-52 drop-shadow-md"
      viewBox="0 0 120 525"
    >
      <rect
        fill="#84cc16"
        height="30"
        width="120"
        x="0"
        y="495"
      />
      <rect
        fill="#65a30d"
        height="4"
        width="120"
        x="0"
        y="493"
      />
      <g>
        <rect
          fill="#fef3c7"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="457"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="465"
        />
      </g>
      <g>
        <rect
          fill="#fde68a"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="429"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="437"
        />
      </g>
      <g>
        <rect
          fill="#fcd34d"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="401"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="409"
        />
      </g>
      <g>
        <rect
          fill="#fbbf24"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="373"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="381"
        />
      </g>
      <g>
        <rect
          fill="#f59e0b"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="345"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="353"
        />
      </g>
      <g>
        <rect
          fill="#fb923c"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="317"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="325"
        />
      </g>
      <g>
        <rect
          fill="#f97316"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="289"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="297"
        />
      </g>
      <g>
        <rect
          fill="#ea580c"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="261"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="269"
        />
      </g>
      <g>
        <rect
          fill="#dc2626"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="233"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="241"
        />
      </g>
      <g>
        <rect
          fill="#e11d48"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="205"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="213"
        />
      </g>
      <g>
        <rect
          fill="#db2777"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="177"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="185"
        />
      </g>
      <g>
        <rect
          fill="#c026d3"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="149"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="157"
        />
      </g>
      <g>
        <rect
          fill="#a855f7"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="121"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="129"
        />
      </g>
      <g>
        <rect
          fill="#7c3aed"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="93"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="101"
        />
      </g>
      <g>
        <rect
          fill="#6366f1"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="65"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="73"
        />
      </g>
      <g>
        <line
          stroke="#451a03"
          stroke-width="2"
          x1="60"
          x2="60"
          y1="65"
          y2="30"
        />
        <polygon
          fill="#dc2626"
          points="60,30 82,37 60,44"
          stroke="#7f1d1d"
          stroke-width="1"
        />
      </g>
    </svg>
    <figcaption
      class="text-center"
    >
      <p
        class="text-sm font-bold text-gray-600"
      >
        Lily
         sitt Mattetårn
      </p>
      <p
        class="text-xs text-gray-500"
      >
        15
         / 
        15
         etasjer
      </p>
    </figcaption>
  </figure>
</div>
`;

exports[`Tårn snapshot første etasje 1`] = `
<div>
  <figure
    class="flex flex-col items-center gap-3"
  >
    <svg
      aria-label="Lily sitt mattetårn med 1 av 15 etasjer bygget"
      class="w-40 md:w-52 drop-shadow-md"
      viewBox="0 0 120 98"
    >
      <rect
        fill="#84cc16"
        height="30"
        width="120"
        x="0"
        y="68"
      />
      <rect
        fill="#65a30d"
        height="4"
        width="120"
        x="0"
        y="66"
      />
      <g>
        <rect
          fill="#fef3c7"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="30"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="38"
        />
      </g>
    </svg>
    <figcaption
      class="text-center"
    >
      <p
        class="text-sm font-bold text-gray-600"
      >
        Lily
         sitt Mattetårn
      </p>
      <p
        class="text-xs text-gray-500"
      >
        1
         / 
        15
         etasjer
      </p>
    </figcaption>
  </figure>
</div>
`;

exports[`Tårn snapshot midt-tårn (etasje 7) 1`] = `
<div>
  <figure
    class="flex flex-col items-center gap-3"
  >
    <svg
      aria-label="Lily sitt mattetårn med 8 av 15 etasjer bygget"
      class="w-40 md:w-52 drop-shadow-md"
      viewBox="0 0 120 294"
    >
      <rect
        fill="#84cc16"
        height="30"
        width="120"
        x="0"
        y="264"
      />
      <rect
        fill="#65a30d"
        height="4"
        width="120"
        x="0"
        y="262"
      />
      <g>
        <rect
          fill="#fef3c7"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="226"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="234"
        />
      </g>
      <g>
        <rect
          fill="#fde68a"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="198"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="206"
        />
      </g>
      <g>
        <rect
          fill="#fcd34d"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="170"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="178"
        />
      </g>
      <g>
        <rect
          fill="#fbbf24"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="142"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="150"
        />
      </g>
      <g>
        <rect
          fill="#f59e0b"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="114"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="122"
        />
      </g>
      <g>
        <rect
          fill="#fb923c"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="86"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="94"
        />
      </g>
      <g>
        <rect
          fill="#f97316"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="58"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="66"
        />
      </g>
      <g>
        <rect
          fill="#ea580c"
          height="28"
          rx="3"
          stroke="#78350f"
          stroke-width="2"
          width="80"
          x="20"
          y="30"
        />
        <rect
          fill="#fef9c3"
          height="12"
          rx="1"
          stroke="#78350f"
          stroke-width="1.5"
          width="12"
          x="54"
          y="38"
        />
      </g>
    </svg>
    <figcaption
      class="text-center"
    >
      <p
        class="text-sm font-bold text-gray-600"
      >
        Lily
         sitt Mattetårn
      </p>
      <p
        class="text-xs text-gray-500"
      >
        8
         / 
        15
         etasjer
      </p>
    </figcaption>
  </figure>
</div>
`;
